--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "firebase build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +42,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/hongorzulnemo/writeonme-react/issues"
-  },
-  "homepage": "https://github.com/hongorzulnemo/writeonme-react#readme"
+  }
 }
