--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,6 @@
 {
   "hosting": {
-    "public": "build",
-    "target": "write-on-me",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -14,6 +13,7 @@
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    ],
+    "source": "functions"
   }
 }
