--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage/
 
 # production
-/build
+build/
+dist/
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
 
+# Firebase credentials and local environment files
+.env
+.env.*
+database-debug.log
+database.rules.json
+firebase-debug.log
+firebase-debug.*.log
+serviceAccountKey.json
+src/init-firebase.js
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+ui-debug.log*
+
+# IDE files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
