--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@react-firebase/database": "^0.3.11",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "bootstrap": "^4.4.1",
-    "firebase-admin": "^8.12.1",
-    "firebase-functions": "^3.6.2",
+    "firebase": "^8.0.0",
+    "firebase-admin": "^9.4.2",
+    "firebase-functions": "^3.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^4.0.1"
+  },
+  "engines": {
+    "node": ">= 8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
