--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
-    "public": "public",
+    "target": "wordperminute",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
