--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-toggle": "^4.1.3",
+    "use-persisted-state": "^0.3.3"
   },
   "engines": {
     "node": ">= 8.0.0"
