--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ dist/
 .DS_Store
 Thumbs.db
 
+# config files
+src/init-firebase.js
+
 # Firebase credentials and local environment files
 .env
 .env.*
