--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.4.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap": "^1.6.8",
     "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
     "react-responsive": "^10.0.1",
